--- a/demos/style.css
+++ b/demos/style.css
@@ -1,8 +1,15 @@
 #wrapper {
-     width: 200px;
-     margin: 0 auto;
-    position: relative;
+    margin: 0 auto;
+    position: absolute;
+    width: 200px;
+    background: black;
+    padding: 20px;
 }
 
 #fileDisplayArea {
+}
+
+body {
+    margin: 20;
+    padding: 20;
 }
