--- a/demos/style.css
+++ b/demos/style.css
@@ -1,8 +1,8 @@
 #wrapper {
     margin: 0 auto;
     position: absolute;
-    width: 200px;
-    background: black;
+    width:  220px;
+    background: #D8CEF6;
     padding: 20px;
 }
 
