--- a/demos/style.css
+++ b/demos/style.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     position: absolute;
     width:  220px;
-    background: #D8CEF6;
+    background: #EFF5FB;
     padding: 20px;
 }
 
